@@ -3,7 +3,13 @@
 export NODE_HOSTNAME=$(echo "$NODE_HOSTNAME"|sed 's/\"//g'|sed 's/ //g')
 echo "NODE_HOSTNAME: $NODE_HOSTNAME"
 
-export JAVA_OPTS="${JAVA_OPTS} ${PROXY_JAVA_OPTS} -Duser.timezone=Europe/Paris -Dglowroot.agent.id=megalis::esb::${NODE_HOSTNAME} -javaagent:/glowroot/glowroot.jar"
+#Parametre gestion de mémoire par la limitation de ram donnée par docker (spécifique java8)
+JAVA_OPTS="$JAVA_OPTS_ADD -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap"
+#glowroot
+JAVA_OPTS="$JAVA_OPTS -Dglowroot.agent.id=megalis::esb::${NODE_HOSTNAME} -javaagent:/glowroot/glowroot.jar"
+
+export JAVA_OPTS="$JAVA_OPTS -Duser.timezone=Europe/Paris "
+
 echo "JAVA_OPTS: ${JAVA_OPTS}"
 
 catalina.sh run
